--- a/style.css
+++ b/style.css
@@ -1,47 +1,45 @@
 body{
-    overflow: hidden;  
+    margin: 0;
+}
+
+html, 
+body {
+    height: 100%;
 }
 
 .content-value{
-    margin: 11px;
+    margin: 12px;
     border-style: solid;
     border-color: black;
     width: 70%;
-    height: 70px;
+    height: 68px;
     left: 180px;
     position: relative; 
-
 }
 
-.fixed-position{
-    position: fixed; 
-    top: 0;
-    left: 0;
-}
-
-.inline{
+.inline-display{
     display: inline-block;
 }
 
-#toolbar{
-    display: block;
-    width: 100%;
-    height: 150px;
-    background-color: #5bacfe; 
+.toolbar{
+    height: 136px;
+    background-color: #226cb6; 
 }
 
+#page{
+    display: flex;
+    height: calc( 100vh - 136px);
+}
 
 #navigation-panel{
-    top: 150px;
-    width: 15%;
-    height: 700px;
-    background-color: rgba(194, 191, 191, 0.952);
+    height: 100%;
+    width: 150px;
+    background-color: gray;
 }
 
 #content{
-    height: 570px;
-    width: 84%;
-    top: 150px;
-    margin-left: 246px;
+    height: 100%;
+    flex: 1;
     overflow-y: auto; 
+    background-color: rgb(255, 255, 255);
  }
